wordle/style.css
#title {
    margin: 16px;
    font-size: 48px;
    text-align: center;
}

#container {
    padding: 8px 32px 32px 32px;
    box-shadow: 0px 0px var(--border-rad) 2px var(--color-border);
    border-radius: 8px;
    max-width: fit-content;
    margin-left: auto;
    margin-right: auto;
}

@media only screen and (max-width: 500px) {
    #container {
        border-radius: 0px;
        padding: 32px 0px;
        min-width: 100%;
    }
}

#board {
    margin: auto;
}

#board th,
#board td {
    border: 2px solid var(--color-border);
    border-radius: 4px;
    width: 64px;
    height: 64px;
    font-size: 48px;
    font-weight: 600;
    margin-left: auto;
    margin-right: auto;
}

#keyboard {
    text-align: center;
    width: 380px;
    height: auto;
    margin-left: auto;
    margin-right: auto;
    display: block;
    padding: 0px;
    position: relative;
}

#keyboard button {
    font-size: 16px;
    color: var(--color-font);
    border: 2px solid var(--color-border);
    border-radius: 4px;
    height: 44px;
    width: 32px;
    margin: 1px;
    left: 0px;
}

.hidden {
    display: none;
}


/* For the fields */

.selected {
    background-color: var(--color-wordle-selected);
}

.deselected {
    background-color: var(--color-wordle-deselected);
}

.correct {
    background-color: var(--color-wordle-correct);
}

.wrong {
    background-color: var(--color-wordle-wrong);
}

.doesntexist {
    background-color: var(--color-wordle-doesntexist);
}

.included {
    background-color: var(--color-wordle-included);
}


/* Popup */

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.1);
}

@keyframes popup-animation {
    from {
        opacity: 0%;
    }
    to {
        opacity: 100%;
    }
}

.modal-content {
    background-color: #fefefe;
    margin: 15% auto;
    padding: 20px;
    max-width: 400px;
    box-shadow: 0px 0px 5px 2px #888;
    border-radius: 8px;
    animation-name: popup-animation;
    animation-duration: 1s;
}

.modal-content button {
    background-color: gainsboro;
    border-style: none;
    border-radius: 8px;
    padding: 8px 12px;
    text-align: center;
    text-decoration: none;
    margin: 4px 2px;
}

.modal-content button:hover {
    background-color: cornflowerblue;
}

.modal-content button:focus {
    background-color: dodgerblue;
}

.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

